--- a/www/index.html
+++ b/www/index.html
@@ -4,17 +4,17 @@
   <meta name="name" content="content">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <meta http-equiv="Content-Script-Type" content="text/javascript">
-  <meta http-equiv="Last-Modified" content="2019-05-29 07:12:25 (Wednesday) GMT">
+  <meta http-equiv="Last-Modified" content="2019-05-29 07:12:27 (Wednesday) GMT">
   <meta name="keywords" content=", 青少年, 若者, 自立, 支援, 子ども, 青少年自立支援, 職業訓練, 奈良, 橿原, 就職活動, 就職, ニート, フリーター, ひきこもり, 子ども若者支援, 居場所, ＮＰＯ法人 ">
   <meta name="description" content="">
 
   <title>="" </title>
-        <link rel="stylesheet" type="text/css" href="./../image/reset-min.css">
-		        <link rel="stylesheet" media="handheld, only screen and (max-width: 767px)" type="text/css" href="./../image/mockup_mobile.css">
-        <link href="./../image/common.css" rel="stylesheet" type="text/css">
-		        <link rel="shortcut icon" href="./../images/favicon.ico">
+        <link rel="stylesheet" type="text/css" href="./image/reset-min.css">
+		        <link rel="stylesheet" media="handheld, only screen and (max-width: 767px)" type="text/css" href="./image/mockup_mobile.css">
+        <link href="./image/common.css" rel="stylesheet" type="text/css">
+		        <link rel="shortcut icon" href="./images/favicon.ico">
 
-  <script type="text/javascript" async="" src="./../images/ga.js"></script><script type="text/javascript">
+  <script type="text/javascript" async="" src="./images/ga.js"></script><script type="text/javascript">
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-23234148-1']);
@@ -52,7 +52,7 @@
     <div id="header">
       <h1 id="title"> <a href="http://cscnara.ksaka.net/index.html" target="_parent"><img
 
-            src="./../image/main_logo.jpg" alt="NPO法人キャリアサポートセンター奈良" height="112"
+            src="./image/main_logo.jpg" alt="NPO法人キャリアサポートセンター奈良" height="112"
 
             width="452" /></a> </h1>
       <div id="right">
@@ -106,16 +106,16 @@
         <div id="banner_zone">
           <div id="banner_hikikomori"> <a href="http://cscnara.ksaka.net/kazokukai.html"
 
-              target="_parent"><img src="./../image/kazokunokaibanner.jpg" alt="平成30年ひきこもりセミナー" /><!--家族の会--></a>
+              target="_parent"><img src="./image/kazokunokaibanner.jpg" alt="平成30年ひきこもりセミナー" /><!--家族の会--></a>
             <a href="http://cscnara.ksaka.net/honninkai.html" target="_parent"><img
 
-                src="./../image/honnninnbanner.jpg" alt="平成30年ひきこもりセミナー" /><!--家族の会--></a>
+                src="./image/honnninnbanner.jpg" alt="平成30年ひきこもりセミナー" /><!--家族の会--></a>
           </div>
           <p id="banner_chukan"><!--<img src="images/290728.png" width="100%">--><a
 
               href="http://cscnara.ksaka.net/chukansyurou.html" target="_parent"><img
 
-                src="./../image/banner_chukan.png" alt="平成30年若年就職困難者職場実習等" /><!--中間就労--></a></p>
+                src="./image/banner_chukan.png" alt="平成30年若年就職困難者職場実習等" /><!--中間就労--></a></p>
           <p id="banner_jiritu"><!--子供の自立 パンフレット--> <br />
           </p>
           <p id="banner_blog"><a href="http://cscnara.blog.jp/">blog</a></p>
@@ -123,12 +123,12 @@
           <p></p>
         </div>
         <div class="bannerbox">
-          <p><a href="http://workwaku.ksaka.net/" target="_top"><img src="./../image/workwaku.png"
+          <p><a href="http://workwaku.ksaka.net/" target="_top"><img src="./image/workwaku.png"
 
                 alt="" /></a></p>
         </div>
         <div class="bannerbox">
-          <p><a href="http://cspgschool.blog.jp/" target="_top"><img src="./../image/pgschool.png"
+          <p><a href="http://cspgschool.blog.jp/" target="_top"><img src="./image/pgschool.png"
 
                 alt="" /></a></p>
         </div>
@@ -147,7 +147,7 @@
           </ul>
         </div>
         <ul id="csschool">
-          <li id="title2"><img src="./../image/side_title.jpg" alt="CSスクール" height="109"
+          <li id="title2"><img src="./image/side_title.jpg" alt="CSスクール" height="109"
 
               width="240" /></li>
           <li><a href="http://cscnara.ksaka.net/school.html" target="_parent">本
@@ -160,7 +160,7 @@
             相談はこちらへ</p>
           <a href="http://otasuke6776.web.fc2.com/index.html" target="_blank"><img
 
-              src="./../image/banner_computer.gif" alt="パソコンなら青年お助け隊" height="136"
+              src="./image/banner_computer.gif" alt="パソコンなら青年お助け隊" height="136"
 
               width="141" /></a> </div>
       </div>
@@ -169,23 +169,23 @@
       <ul>
         <li><a href="http://www.pref.nara.jp/dd_aspx_menuid-1649.htm" target="_blank"><img
 
-              src="./../image/banner_naraprefecture.jpg" alt="奈良県青少年生涯学習課" height="42"
+              src="./image/banner_naraprefecture.jpg" alt="奈良県青少年生涯学習課" height="42"
 
               width="129" /><br />
             奈良県青少年・生涯学習課</a></li>
         <li><a href="http://www.chuokai-nara.or.jp/nara-saposute/" target="_blank"><img
 
-              src="./../image/banner_supportstation.jpg" alt="奈良若者サポートステーション"
+              src="./image/banner_supportstation.jpg" alt="奈良若者サポートステーション"
 
               height="55" width="127" /><br />
             奈良 若者サポートステーション</a></li>
-        <li><a href="http://miminashi.iinaa.net/" target="_blank"><img src="./../image/banner_miminashichiiki.jpg"
+        <li><a href="http://miminashi.iinaa.net/" target="_blank"><img src="./image/banner_miminashichiiki.jpg"
 
               alt="みみなし地域学級" height="106" width="94" /><br />
             みみなし地域学級</a></li>
         <li> <a href="http://www.city.kashihara.nara.jp/shiminkyodo/index.html"
 
-            target="_blank"><img src="./../image/banner_kyoudou.gif" alt="橿原協働のひろば"
+            target="_blank"><img src="./image/banner_kyoudou.gif" alt="橿原協働のひろば"
 
               height="69" width="161" /><br />
             橿原市　協働のひろば</a></li>
@@ -218,13 +218,13 @@
     <li><a href="http://cscnara.ksaka.net/contact.html" target="_parent">お
         問合せ</a></li>
   </ul>
-  <p><img src="./../image/footer_title.jpg" alt="NPO法人キャリアサポートセンター奈良" height="60"
+  <p><img src="./image/footer_title.jpg" alt="NPO法人キャリアサポートセンター奈良" height="60"
 
       width="256" /> </p>
 </div>
 </div>
-<img src="./../image/001.jpg" alt="奈良若者サポートステーション" height="1" width="1" />
+<img src="./image/001.jpg" alt="奈良若者サポートステーション" height="1" width="1" />
 </html>
 
-<p style="text-align: center">2019-05-29 07:12:25 (Wednesday)</p>
+<p style="text-align: center">2019-05-29 07:12:27 (Wednesday)</p>
 </html>
