--- a/www/image/index.html
+++ b/www/image/index.html
@@ -4,7 +4,7 @@
   <meta name="name" content="content">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <meta http-equiv="Content-Script-Type" content="text/javascript">
-  <meta http-equiv="Last-Modified" content="2019-05-29 07:12:25 (Wednesday) GMT">
+  <meta http-equiv="Last-Modified" content="2019-05-29 09:14:16 (Wednesday) GMT">
   <meta name="keywords" content=", 青少年, 若者, 自立, 支援, 子ども, 青少年自立支援, 職業訓練, 奈良, 橿原, 就職活動, 就職, ニート, フリーター, ひきこもり, 子ども若者支援, 居場所, ＮＰＯ法人 ">
   <meta name="description" content="">
 
@@ -95,6 +95,7 @@
         </ul>
         <!-- 原稿-->
         
+        <!-- 原稿-->
         <div id="index_bottom_news">
           <div id="index_news">
             <p><a href="http://cscnara.ksaka.net/circle.html">ニート脱出サークル説明会開催</a></p>
@@ -194,6 +195,7 @@
   </div>
   <div id="foot_wrapper">
 ﻿
+<div id="foot_wrapper">
 <div id="footer">
   <dl>
     <dt>CSスクール</dt>
@@ -226,5 +228,5 @@
 <img src="./../image/001.jpg" alt="奈良若者サポートステーション" height="1" width="1" />
 </html>
 
-<p style="text-align: center">2019-05-29 07:12:25 (Wednesday)</p>
+<p style="text-align: center">2019-05-29 09:14:16 (Wednesday)</p>
 </html>
