--- a/www/chukansyurou/index.html
+++ b/www/chukansyurou/index.html
@@ -4,7 +4,7 @@
   <meta name="name" content="content">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <meta http-equiv="Content-Script-Type" content="text/javascript">
-  <meta http-equiv="Last-Modified" content="2019-05-30 14:41:02 (Thursday) GMT">
+  <meta http-equiv="Last-Modified" content="2019-05-30 15:29:03 (Thursday) GMT">
   <meta name="keywords" content=", 青少年, 若者, 自立, 支援, 子ども, 青少年自立支援, 職業訓練, 奈良, 橿原, 就職活動, 就職, ニート, フリーター, ひきこもり, 子ども若者支援, 居場所, ＮＰＯ法人 ">
   <meta name="description" content="">
 
@@ -93,99 +93,11 @@
             <li id="circle"><a href="./../circle/index.html" target="_parent">ニー
                 ト脱出サークル</a></li>
           </ul>
-          <!-- 原稿-->   <body>
-    <h4 class="letter_title">ご支援・ご入会のご案内</h4>
-    <p>特定非営利活動（ＮＰＯ）法人は常に事業による自活努力を行うことが原則であり、私どもも収益事業の確立を模索しております。
-      日本では特定非営利活動（ＮＰＯ）法人に対する事業環境の整備や公的助成制度が未だ確立されず、現状では会員の会費や任意の寄付に負うところが大であります。</p>
-    <p>就職環境の整備及び支援という当法人の趣旨にご賛同いただける皆様、是非ともご支援いただきますようお願い申し上げます。</p>
-    <p>ご入会・ご賛同・お問い合わせは、「入会のご案内」のページをご利用いただくか、お電話にてお問い合わせください。</p>
-    <p>橿原新ノ口校　担当：理事長山田　　Tel.Fax：0744-29-6776</p>
-    <p><strong><br>
-      </strong><strong>『ＮＰＯ法人キャリアサポートセンター奈良』の<br>
-        会員になりませんか！</strong></p>
-    <p>会員のお取り扱いは、以下のようになっています。</p>
-    <table id="out_member">
-      <tbody>
-        <tr>
-          <th class="title" colspan="2">会員種別</th>
-        </tr>
-        <tr>
-          <td class="sub_title">正会員</td>
-          <td>当法人の事業に賛同し、利用・活用するために入会する法人・<br>
-            団体及び個人</td>
-        </tr>
-        <tr>
-          <td class="sub_title">賛助会員</td>
-          <td>当法人の事業に賛同し、その事業を賛助する法人・団体及び個人</td>
-        </tr>
-        <tr>
-          <th colspan="2" class="title">入会金及び年会費</th>
-        </tr>
-        <tr>
-          <td class="sub_title">正会員</td>
-          <td>入会金１口　５，０００円<br>
-            年会費１口　２，０００円<br>
-            入会金は１口以上何口でも可<br>
-            法人・団体の年会費は３口以上でお願いします。<br>
-            ※年会費は入会の日より１年間有効</td>
-        </tr>
-        <tr>
-          <td class="sub_title">賛助会員</td>
-          <td>１口　２，０００円<br>
-            １口以上何口でも可<br>
-            但し、法人・団体は５口以上でお願いします。</td>
-        </tr>
-        <tr>
-          <th colspan="2" class="title">銀行振込</th>
-        </tr>
-        <tr>
-          <td class="sub_title">銀行名</td>
-          <td>南都銀行（０１６２）　橿原支店（４９０）</td>
-        </tr>
-        <tr>
-          <td class="sub_title">口座番号</td>
-          <td>普通預金　２１１０００９</td>
-        </tr>
-        <tr>
-          <td class="sub_title">口座名義</td>
-          <td>特定非営利活動法人キャリアサポートセンター奈良</td>
-        </tr>
-        <tr>
-          <td class="sub_title">フリガナ</td>
-          <td>トクヒキャリアサポートセンターナラ</td>
-        </tr>
-        <tr>
-          <td>　</td>
-          <td>※振込手数料のご負担をお願いします</td>
-        </tr>
-        <tr>
-          <th colspan="2" class="title">郵便振込</th>
-        </tr>
-        <tr>
-          <td class="sub_title">番　　号</td>
-          <td>００９００－９－２７８３６０</td>
-        </tr>
-        <tr>
-          <td class="sub_title">名　　義</td>
-          <td>ＮＰＯ法人　キャリアサポートセンター奈良<br>
-            ※振込手数料のご負担をお願いします</td>
-        </tr>
-        <tr>
-          <th colspan="2" class="title">正会員特典</th>
-        </tr>
-      </tbody>
-      <tbody>
-        <tr>
-          <td class="center" colspan="2">採用サポート、社員教育サポート、スキルアップサポート、<br>
-            インターンシップ（短期就労体験）、現有社員の個別カウンセリング、<br>
-            人事労務問題サポート講習会、<br>
-            研修会の開催離・転職予定者の個別カウンセリング及び就職活動サポート、<br>
-            その他　お問い合わせください。</td>
-        </tr>
-      </tbody>
-    </table>
-  </body>
+          <!-- 原稿--> <img src="./../image/1_imege.png" alt="ひきこもり 家族の会 子どもの自立で悩む家族">
 
+
+<div class="imgcenter">
+<a href="./index.html" target="_parent"><img src="./../image/1_imege.png" alt="平成30年ひきこもりセミナー">
 
           <!-- 原稿-->
           <div id="index_bottom_news">
@@ -204,7 +116,7 @@
 
                   src="./../../image/menu_2.PNG" alt="平成30年ひきこもりセミナー"><!--家族の会--></a>
             </div>
-
+            <p id="banner_chukan"><a href="./../chukansyurou/index.html" target="_parent"><img src="./../image/menu_3.PNG" alt="平成30年若年就職困難者職場実習等" /><!--中間就労--></a></p>
             <p id="banner_blog"><a href="http://cscnara.blog.jp/"><img src="./../../image/menu_4.png" alt="毎日ブログ">blog</a></p>
             <br>
             <p></p>
@@ -312,5 +224,5 @@
 <img src="./../image/001.jpg" alt="奈良若者サポートステーション" height="1" width="1" />
 </html>
 
-<p style="text-align: center">2019-05-30 14:41:02 (Thursday)</p>
+<p style="text-align: center">2019-05-30 15:29:03 (Thursday)</p>
 </html>
