--- a/www/netcircle/index.html
+++ b/www/netcircle/index.html
@@ -4,7 +4,7 @@
   <meta name="name" content="content">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <meta http-equiv="Content-Script-Type" content="text/javascript">
-  <meta http-equiv="Last-Modified" content="2019-05-30 14:41:02 (Thursday) GMT">
+  <meta http-equiv="Last-Modified" content="2019-05-30 15:29:04 (Thursday) GMT">
   <meta name="keywords" content=", 青少年, 若者, 自立, 支援, 子ども, 青少年自立支援, 職業訓練, 奈良, 橿原, 就職活動, 就職, ニート, フリーター, ひきこもり, 子ども若者支援, 居場所, ＮＰＯ法人 ">
   <meta name="description" content="">
 
@@ -111,7 +111,7 @@
 
                   src="./../../image/menu_2.PNG" alt="平成30年ひきこもりセミナー"><!--家族の会--></a>
             </div>
-
+            <p id="banner_chukan"><a href="./../chukansyurou/index.html" target="_parent"><img src="./../image/menu_3.PNG" alt="平成30年若年就職困難者職場実習等" /><!--中間就労--></a></p>
             <p id="banner_blog"><a href="http://cscnara.blog.jp/"><img src="./../../image/menu_4.png" alt="毎日ブログ">blog</a></p>
             <br>
             <p></p>
@@ -219,5 +219,5 @@
 <img src="./../image/001.jpg" alt="奈良若者サポートステーション" height="1" width="1" />
 </html>
 
-<p style="text-align: center">2019-05-30 14:41:02 (Thursday)</p>
+<p style="text-align: center">2019-05-30 15:29:04 (Thursday)</p>
 </html>
